<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlists.OnePlaylistFragment">

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/duraci_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_duration_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toEndOf="@+id/textViewDuration"
        app:layout_constraintTop_toTopOf="@+id/textViewDuration" />

    <Button
        android:id="@+id/button_edit_one_playlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_baseline_library_music_24"
        android:drawableTint="?attr/colorOnPrimary"
        android:text="@string/editar"
        app:layout_constraintEnd_toStartOf="@+id/button_add_songs_one_playlist"

        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDuration"
        app:layout_constraintWidth_percent="0.35" />

    <Button
        android:id="@+id/button_add_songs_one_playlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.09"
        android:lines="2"
        android:text="@string/agregar_canciones"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_edit_one_playlist"
        app:layout_constraintTop_toTopOf="@+id/button_edit_one_playlist" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit_one_playlist"
        android:id="@+id/recycler_view_one_playlist_songs"
        android:paddingLeft="16dp"
        android:paddingRight="8dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty_message_one_playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit_one_playlist"
        android:visibility="gone">





        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/confused_emoji"
            app:layout_constraintDimensionRatio="1:1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="4"
            android:padding="16dp"
            android:text="@string/empty_playlist_message"
            android:textSize="@dimen/text_size_larger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>